src/grammar/com/shelloid/query/ShelloidQueryParser.java
// Generated from ShelloidQueryParser.g4 by ANTLR 4.5
package com.shelloid.query;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ShelloidQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, FROM=2, WHERE=3, HAVING=4, SAMPLE=5, SETUP=6, TEARDOWN=7, ON=8, 
		EVERY=9, PRIORITY=10, ACTION=11, LET=12, LC=13, RC=14, LP=15, RP=16, INT=17, 
		STRING=18, FLOAT=19, DIV=20, MUL=21, MOD=22, PLUS=23, MINUS=24, EQ=25, 
		AND=26, OR=27, NOT=28, LT=29, GT=30, GTE=31, LTE=32, NEQ=33, DOT=34, ID=35, 
		WS=36, COMMENT=37, COMMA=38, SEMI=39, LETTER=40, DIGIT=41;
	public static final int
		RULE_query = 0, RULE_samplingClause = 1, RULE_samplingPeriod = 2, RULE_samplingEvents = 3, 
		RULE_priority = 4, RULE_selectClause = 5, RULE_qualifiedName = 6, RULE_simpleName = 7, 
		RULE_literal = 8, RULE_paramList = 9, RULE_selectTerm = 10, RULE_fromClause = 11, 
		RULE_arithExpr = 12, RULE_functionCallExpr = 13, RULE_commonExpr = 14, 
		RULE_relationalExpr = 15, RULE_booleanExpr = 16, RULE_letClause = 17, 
		RULE_whereClause = 18, RULE_setupClause = 19, RULE_teardownClause = 20, 
		RULE_actionClause = 21, RULE_script = 22;
	public static final String[] ruleNames = {
		"query", "samplingClause", "samplingPeriod", "samplingEvents", "priority", 
		"selectClause", "qualifiedName", "simpleName", "literal", "paramList", 
		"selectTerm", "fromClause", "arithExpr", "functionCallExpr", "commonExpr", 
		"relationalExpr", "booleanExpr", "letClause", "whereClause", "setupClause", 
		"teardownClause", "actionClause", "script"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'SELECT'", "'FROM'", "'WHERE'", "'HAVING'", "'SAMPLE'", "'SETUP'", 
		"'TEARDOWN'", "'ON'", "'EVERY'", "'PRIORITY'", "'ACTION'", "'LET'", "'{'", 
		"'}'", "'('", "')'", null, null, null, "'/'", "'*'", "'%'", "'+'", "'-'", 
		"'='", "'AND'", "'OR'", "'NOT'", "'<'", "'>'", "'>='", "'<='", "'<>'", 
		"'.'", null, null, null, "','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SELECT", "FROM", "WHERE", "HAVING", "SAMPLE", "SETUP", "TEARDOWN", 
		"ON", "EVERY", "PRIORITY", "ACTION", "LET", "LC", "RC", "LP", "RP", "INT", 
		"STRING", "FLOAT", "DIV", "MUL", "MOD", "PLUS", "MINUS", "EQ", "AND", 
		"OR", "NOT", "LT", "GT", "GTE", "LTE", "NEQ", "DOT", "ID", "WS", "COMMENT", 
		"COMMA", "SEMI", "LETTER", "DIGIT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ShelloidQueryParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShelloidQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(ShelloidQueryParser.SELECT, 0); }
		public SelectClauseContext selectClause() {
			return getRuleContext(SelectClauseContext.class,0);
		}
		public TerminalNode FROM() { return getToken(ShelloidQueryParser.FROM, 0); }
		public FromClauseContext fromClause() {
			return getRuleContext(FromClauseContext.class,0);
		}
		public TerminalNode SAMPLE() { return getToken(ShelloidQueryParser.SAMPLE, 0); }
		public SamplingClauseContext samplingClause() {
			return getRuleContext(SamplingClauseContext.class,0);
		}
		public TerminalNode LET() { return getToken(ShelloidQueryParser.LET, 0); }
		public LetClauseContext letClause() {
			return getRuleContext(LetClauseContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(ShelloidQueryParser.WHERE, 0); }
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public TerminalNode SETUP() { return getToken(ShelloidQueryParser.SETUP, 0); }
		public SetupClauseContext setupClause() {
			return getRuleContext(SetupClauseContext.class,0);
		}
		public TerminalNode TEARDOWN() { return getToken(ShelloidQueryParser.TEARDOWN, 0); }
		public TeardownClauseContext teardownClause() {
			return getRuleContext(TeardownClauseContext.class,0);
		}
		public TerminalNode ACTION() { return getToken(ShelloidQueryParser.ACTION, 0); }
		public ActionClauseContext actionClause() {
			return getRuleContext(ActionClauseContext.class,0);
		}
		public TerminalNode PRIORITY() { return getToken(ShelloidQueryParser.PRIORITY, 0); }
		public PriorityContext priority() {
			return getRuleContext(PriorityContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(SELECT);
			setState(47);
			selectClause();
			setState(48);
			match(FROM);
			setState(49);
			fromClause();
			setState(52);
			_la = _input.LA(1);
			if (_la==LET) {
				{
				setState(50);
				match(LET);
				setState(51);
				letClause();
				}
			}

			setState(56);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(54);
				match(WHERE);
				setState(55);
				whereClause();
				}
			}

			setState(60);
			_la = _input.LA(1);
			if (_la==SETUP) {
				{
				setState(58);
				match(SETUP);
				setState(59);
				setupClause();
				}
			}

			setState(64);
			_la = _input.LA(1);
			if (_la==TEARDOWN) {
				{
				setState(62);
				match(TEARDOWN);
				setState(63);
				teardownClause();
				}
			}

			setState(68);
			_la = _input.LA(1);
			if (_la==ACTION) {
				{
				setState(66);
				match(ACTION);
				setState(67);
				actionClause();
				}
			}

			setState(70);
			match(SAMPLE);
			setState(71);
			samplingClause();
			setState(74);
			_la = _input.LA(1);
			if (_la==PRIORITY) {
				{
				setState(72);
				match(PRIORITY);
				setState(73);
				priority();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SamplingClauseContext extends ParserRuleContext {
		public TerminalNode EVERY() { return getToken(ShelloidQueryParser.EVERY, 0); }
		public SamplingPeriodContext samplingPeriod() {
			return getRuleContext(SamplingPeriodContext.class,0);
		}
		public TerminalNode ON() { return getToken(ShelloidQueryParser.ON, 0); }
		public SamplingEventsContext samplingEvents() {
			return getRuleContext(SamplingEventsContext.class,0);
		}
		public SamplingClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_samplingClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterSamplingClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitSamplingClause(this);
		}
	}

	public final SamplingClauseContext samplingClause() throws RecognitionException {
		SamplingClauseContext _localctx = new SamplingClauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_samplingClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			switch (_input.LA(1)) {
			case EVERY:
				{
				setState(76);
				match(EVERY);
				setState(77);
				samplingPeriod();
				}
				break;
			case ON:
				{
				setState(78);
				match(ON);
				setState(79);
				samplingEvents();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SamplingPeriodContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ShelloidQueryParser.INT, 0); }
		public SamplingPeriodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_samplingPeriod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterSamplingPeriod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitSamplingPeriod(this);
		}
	}

	public final SamplingPeriodContext samplingPeriod() throws RecognitionException {
		SamplingPeriodContext _localctx = new SamplingPeriodContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_samplingPeriod);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SamplingEventsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ShelloidQueryParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ShelloidQueryParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ShelloidQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ShelloidQueryParser.COMMA, i);
		}
		public SamplingEventsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_samplingEvents; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterSamplingEvents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitSamplingEvents(this);
		}
	}

	public final SamplingEventsContext samplingEvents() throws RecognitionException {
		SamplingEventsContext _localctx = new SamplingEventsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_samplingEvents);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ID);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(85);
				match(COMMA);
				setState(86);
				match(ID);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PriorityContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ShelloidQueryParser.INT, 0); }
		public PriorityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_priority; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterPriority(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitPriority(this);
		}
	}

	public final PriorityContext priority() throws RecognitionException {
		PriorityContext _localctx = new PriorityContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_priority);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectClauseContext extends ParserRuleContext {
		public List<SelectTermContext> selectTerm() {
			return getRuleContexts(SelectTermContext.class);
		}
		public SelectTermContext selectTerm(int i) {
			return getRuleContext(SelectTermContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ShelloidQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ShelloidQueryParser.COMMA, i);
		}
		public SelectClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterSelectClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitSelectClause(this);
		}
	}

	public final SelectClauseContext selectClause() throws RecognitionException {
		SelectClauseContext _localctx = new SelectClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selectClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			selectTerm();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(95);
				match(COMMA);
				setState(96);
				selectTerm();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedNameContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ShelloidQueryParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ShelloidQueryParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(ShelloidQueryParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(ShelloidQueryParser.DOT, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitQualifiedName(this);
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_qualifiedName);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ID);
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(103);
					match(DOT);
					setState(104);
					match(ID);
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ShelloidQueryParser.ID, 0); }
		public SimpleNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterSimpleName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitSimpleName(this);
		}
	}

	public final SimpleNameContext simpleName() throws RecognitionException {
		SimpleNameContext _localctx = new SimpleNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simpleName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ShelloidQueryParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(ShelloidQueryParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(ShelloidQueryParser.STRING, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << FLOAT))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListContext extends ParserRuleContext {
		public List<QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ShelloidQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ShelloidQueryParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitParamList(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			qualifiedName();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(115);
				match(COMMA);
				setState(116);
				qualifiedName();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectTermContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public SimpleNameContext simpleName() {
			return getRuleContext(SimpleNameContext.class,0);
		}
		public TerminalNode LP() { return getToken(ShelloidQueryParser.LP, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode RP() { return getToken(ShelloidQueryParser.RP, 0); }
		public SelectTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterSelectTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitSelectTerm(this);
		}
	}

	public final SelectTermContext selectTerm() throws RecognitionException {
		SelectTermContext _localctx = new SelectTermContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_selectTerm);
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				qualifiedName();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				simpleName();
				setState(124);
				match(LP);
				setState(125);
				paramList();
				setState(126);
				match(RP);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromClauseContext extends ParserRuleContext {
		public SimpleNameContext simpleName() {
			return getRuleContext(SimpleNameContext.class,0);
		}
		public FromClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterFromClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitFromClause(this);
		}
	}

	public final FromClauseContext fromClause() throws RecognitionException {
		FromClauseContext _localctx = new FromClauseContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fromClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			simpleName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithExprContext extends ParserRuleContext {
		public Token op;
		public List<ArithExprContext> arithExpr() {
			return getRuleContexts(ArithExprContext.class);
		}
		public ArithExprContext arithExpr(int i) {
			return getRuleContext(ArithExprContext.class,i);
		}
		public TerminalNode MINUS() { return getToken(ShelloidQueryParser.MINUS, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public FunctionCallExprContext functionCallExpr() {
			return getRuleContext(FunctionCallExprContext.class,0);
		}
		public TerminalNode LP() { return getToken(ShelloidQueryParser.LP, 0); }
		public TerminalNode RP() { return getToken(ShelloidQueryParser.RP, 0); }
		public TerminalNode PLUS() { return getToken(ShelloidQueryParser.PLUS, 0); }
		public TerminalNode MUL() { return getToken(ShelloidQueryParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(ShelloidQueryParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(ShelloidQueryParser.MOD, 0); }
		public ArithExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).enterArithExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ShelloidQueryParserListener ) ((ShelloidQueryParserListener)listener).exitArithExpr(this);
		}
	}

	public final ArithExprContext arithExpr() throws RecognitionException {
		return arithExpr(0);
	}
